[gd_scene load_steps=13 format=3 uid="uid://dqb17cc7h53m2"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_41sj6"]
[ext_resource type="Script" path="res://Scripts/pause.gd" id="2_567k6"]
[ext_resource type="PackedScene" uid="uid://duhds52qepow0" path="res://scenes/enemy.tscn" id="2_gfgn1"]
[ext_resource type="PackedScene" uid="uid://cclrqui8o61ab" path="res://scenes/following_proj.tscn" id="2_p0xs1"]
[ext_resource type="Texture2D" uid="uid://rj85uyese5ji" path="res://Sprites/Textures-16.png" id="3_reux2"]
[ext_resource type="PackedScene" uid="uid://cw3qaoa4iyisd" path="res://scenes/player.tscn" id="3_rgxhc"]
[ext_resource type="Script" path="res://Scripts/following_proj.gd" id="3_y4sar"]
[ext_resource type="PackedScene" uid="uid://cplmj7asbgexe" path="res://scenes/collision_block.tscn" id="4_efg3e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ldmm"]
texture = ExtResource("3_reux2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
7:15/0 = 0
8:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0

[sub_resource type="TileSet" id="TileSet_2c31c"]
sources/0 = SubResource("TileSetAtlasSource_6ldmm")

[sub_resource type="GDScript" id="GDScript_di2lu"]
script/source = "extends StaticBody2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="GDScript" id="GDScript_jbb01"]
script/source = "extends CanvasLayer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Level" type="Node2D"]
process_mode = 1
script = ExtResource("1_41sj6")

[node name="Node" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_567k6")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(8, 8)
tile_set = SubResource("TileSet_2c31c")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(65533, 1114112, 22, 65534, 1114112, 22, 131070, 1114112, 22, 131069, 1114112, 22, 196605, 1114112, 22, 196606, 1114112, 22, 262141, 1114112, 22, 262142, 1114112, 22, 327678, 1114112, 22, 327677, 1114112, 22, 393214, 1114112, 22, 393215, 1114112, 22, 327679, 1114112, 22, 262144, 1114112, 22, 327680, 1114112, 22, 327681, 1507328, 20, 262145, 1179648, 22, 262149, 1179648, 22, 262148, 1179648, 22, 262146, 1179648, 22, 262147, 1179648, 22, 262150, 1179648, 22, 196614, 1179648, 22, 131078, 1179648, 22, 65542, 1179648, 22, 6, 1179648, 22, -65530, 1179648, 22, -65531, 1179648, 22, -65533, 1179648, 22, -65534, 1179648, 22, -1, 1179648, 22, -65535, 1179648, 22, -65536, 1179648, 22, -65532, 1179648, 22, -3, 1179648, 22, -2, 1179648, 22, -65529, 1179648, 22, 7, 1179648, 22, 65543, 1179648, 22, 131079, 1179648, 22, 196615, 1179648, 22, 262151, 1179648, 22, 327687, 1179648, 22, 327686, 1507328, 20, 327684, 1179648, 22, 327682, 1179648, 22, 327683, 1179648, 22, 327685, 1507328, 20, 458750, 1179648, 22, 524286, 1179648, 22, 524287, 1179648, 22, 458753, 1179648, 22, 458754, 1179648, 22, 458752, 1179648, 22, 458751, 1179648, 22, 393216, 1179648, 22, 393218, 1179648, 22, 393219, 1179648, 22, 393220, 1507328, 20, 393217, 1507328, 21, 393221, 1507328, 21, 393222, 1507328, 21, 393223, 1507328, 20, 458759, 1507328, 21, 458757, 1507328, 20, 524293, 1507328, 21, 458758, 1507328, 20, 524294, 1507328, 21, 458756, 1507328, 21, 458755, 1507328, 20, 524291, 1507328, 21)

[node name="FollowingProj" parent="." instance=ExtResource("2_p0xs1")]
process_mode = 1
position = Vector2(88, 354)
script = ExtResource("3_y4sar")

[node name="Enemy" parent="." instance=ExtResource("2_gfgn1")]
position = Vector2(60, 67)
rotation = 2.16944
scale = Vector2(0.465, 0.465)

[node name="player" parent="." instance=ExtResource("3_rgxhc")]
position = Vector2(426, 484)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(0.64, 0.64)

[node name="StaticBlock" parent="." instance=ExtResource("4_efg3e")]
position = Vector2(572, 145)
collision_layer = 3
collision_mask = 3
script = SubResource("GDScript_di2lu")

[node name="Node2" type="CanvasLayer" parent="."]
process_mode = 2
script = SubResource("GDScript_jbb01")

[node name="Mainmenu" type="Button" parent="Node2"]
offset_left = 236.0
offset_top = 175.0
offset_right = 542.0
offset_bottom = 270.0
text = "В главное меню"

[node name="Exit" type="Button" parent="Node2"]
offset_left = 236.0
offset_top = 279.0
offset_right = 541.0
offset_bottom = 432.0
text = "ВЫХОД"

[node name="Entergame" type="Button" parent="Node2"]
offset_left = 549.0
offset_top = 240.0
offset_right = 688.0
offset_bottom = 320.0
text = "Продолжить"

[connection signal="follow_player" from="." to="FollowingProj" method="_on_level_follow_player"]
[connection signal="pressed" from="Node2/Mainmenu" to="Node" method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Node2/Exit" to="Node" method="_on_exit_pressed"]
[connection signal="pressed" from="Node2/Entergame" to="Node" method="_on_entergame_pressed"]
